versioned_docs/version-2025.2.5/turma/iiw_assis/iiw2025a.mdx
---
slug: /turma/iiw2025a
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "IIW2025A",
  "base": "IIW",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Laboratório de Banco de Dados - 1238",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Projeto integrador I - 1078",
          "size": 2,
          "teachers": [
            "Alexandre Rodrigues Monge"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Arte I - 1235",
          "size": 1,
          "teachers": [
            "Simone de Miranda"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Fundamentos de informática - 1076",
          "size": 2,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Física II - 1229",
          "size": 2,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "História I - 1224",
          "size": 1,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Matemática II - 1231",
          "size": 2,
          "teachers": [
            "Jonatan Ismael Eisermann"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura I - 1069",
          "size": 2,
          "teachers": [
            "Kátia Cristiane Kobus Novaes"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "História II - 1234",
          "size": 1,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Matemática I - 1064",
          "size": 2,
          "teachers": [
            "Elenice Josefa Kolancko Setti"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Educação Física II - 1227",
          "size": 2,
          "teachers": [
            "Kleber Augusto Michalichem"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "IIW2025A"
          ],
          "time": "15:55 - 16:45",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Matemática II - 1231",
          "size": 2,
          "teachers": [
            "Jonatan Ismael Eisermann"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Educação Física I - 1072",
          "size": 2,
          "teachers": [
            "Franciele Fernandes Baliero"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Biologia II - 1228",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "sala_02_-_cr_toledo",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Lingua estrangeira - Inglês - 1225",
          "size": 2,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "História II - 1234",
          "size": 1,
          "teachers": [
            "Jael dos Santos"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Filosofia I - 1139",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Desenvolvimento WEB Orientado a Objetos - 1237",
          "size": 2,
          "teachers": [
            "Vagner Simões Santos"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "IIW2025A"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Biologia I - 1073",
          "size": 2,
          "teachers": [
            "Leandro Luiz Borges"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "IIW2025A"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Administração de Sistemas Operacionais e Redes - 1236",
          "size": 2,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "IIW2025A"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        },
        {
          "subject": "Química I - 1068",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "IIW2025A"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Língua Portuguesa e Literatura II - 1226",
          "size": 2,
          "teachers": [
            "Pedro Leites Junior"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Física I - 1070",
          "size": 2,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Projeto Integrador II - 1239",
          "size": 1,
          "teachers": [
            "Alexandre Rodrigues Monge"
          ],
          "classroom": "laboratorio_de_informatica_a",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Filosofia I - 1139",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Arte I - 1235",
          "size": 1,
          "teachers": [
            "Simone de Miranda"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Linguagens de apresentação e estruturação de conteúdos - 1074",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "IIW2025A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Filosofia II - 1232",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Língua Portuguesa e Literatura II - 1226",
          "size": 2,
          "teachers": [
            "Pedro Leites Junior"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Matemática I - 1064",
          "size": 2,
          "teachers": [
            "Elenice Josefa Kolancko Setti"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Administração de Sistemas Operacionais e Redes - 1236",
          "size": 2,
          "teachers": [
            "Douglas Barbosa Sousa"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Sociologia I - 1071",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura I - 1069",
          "size": 2,
          "teachers": [
            "Andrey Felipe Martins"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Geografia I - 1233",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Linguagens de apresentação e estruturação de conteúdos - 1074",
          "size": 2,
          "teachers": [
            "Álvaro José de Almeida Araújo"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "IIW2025A"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Sociologia I - 1071",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Química II - 1230",
          "size": 2,
          "teachers": [
            "Cosme Oliveira da Silva"
          ],
          "classroom": "sala_16-2",
          "students": [
            "IIW2025A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Lógica de programação - 1075",
          "size": 2,
          "teachers": [
            "Caroline Domingues Porto do Nascimento Barbieri"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "IIW2025A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# IIW2025A

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
